tests/sksl/errors/UseWithoutInitializeBinaryExpr.glsl

void binary_expr() {
    bool x;
    if (x) return;
}
